# CISAT-rs

./: Cargo.toml  LICENSE  README.md
examples/: cohort_of_teams.rs  custom_implementation.rs  simple.rs  single_team.rs
src/: agent.rs  lib.rs  main.rs  team.rs  utilities.rs
src/abm/: agent.rs  cohort.rs  mod.rs  team.rs
src/problems/: ackley.rs  example.rs  mod.rs  structure.rs  truss.rs
src/utilities/: mod.rs  parameters.rs  randomness.rs  solution.rs
