[package]
name = "cisat"
version = "0.2.2"
authors = ["Chris McComb <ccmcc2012@gmail.com>"]
edition = "2018"
description = "Cognitively-Inspired Simulated Annealing Teams"
readme = "README.md"
repository = "https://github.com/THREDgroup/cisat-rs"
homepage = "https://github.com/THREDgroup/cisat-rs"
documentation = "https://docs.rs/cisat-rs"
license = "MIT"
keywords = ["simulation", "engineering-design", "teams", "agent-based-modeling"]
categories = ["mathematics", "science", "simulation"]

#[lib]
#name            = "cisat"
#crate-type      = ["cdylib"]

[dependencies]
rand = "0.8.3"
rand_distr = "0.4.0"
structopt = "0.3.21"
indicatif = {version = "0.15.0", features = ["rayon"]}
rayon = "1.5.0"
trussx = {git="https://github.com/cmccomb/trussx"}

[package.metadata.docs.rs]
#rustdoc-args = ["--document-private-items"]